Tweaked text sizes to prevent background image from jumping around; tried to implement dynamic partner logo creation/placement

--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,15 @@ h6 {
     letter-spacing: 1px;
 }
 
+h3 {
+    font-size: 22px;
+}
+
 .subtitle-text {
     display: none;
 }
+
+
 
 @media(min-width:991px) {
     .subtitle-text {
@@ -76,6 +82,7 @@ a:focus {
     color: #fff;
     background: url(../img/title-bg.jpg) no-repeat bottom center scroll;
     background-color: #fff;
+    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -119,7 +126,7 @@ a:focus {
     }
 
     .intro .intro-body .intro-text {
-        font-size: 30px;
+        font-size: 24px;
     }
 
     .content-section {
@@ -140,7 +147,7 @@ a:focus {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px 30px 30px 30px;
+    padding: 10px 20px 0px 20px;
 }
 
 @media(min-width: @screen-lg-min) {
